reference-llvm/tests/should-fail/fail17.mu
// ambiguously boolean

function @entry foo() {
    if (true) {
        true;
    } else {
        7;
    }
}
